--- a/src/app/Authentication/login/login.component.html
+++ b/src/app/Authentication/login/login.component.html
@@ -32,7 +32,7 @@
                     [(ngModel)]="loginEmail"
                     placeholder="Email"
                     name="email"
-                    class="form-control form-control-1 shadow-none"
+                    class="form-control form-control-1g shadow-none"
                   />
                 </div>
                 <div class="input-group mb-3" #passField>
