--- a/src/app/Home/settings/room-rates/room-rates.component.html
+++ b/src/app/Home/settings/room-rates/room-rates.component.html
@@ -75,7 +75,7 @@
           </div>
           <ng-template #content let-modal>
             <div class="modal-body">
-              <div class="modalheader mb-3 d-flex">
+              <div class="modal-header mb-3 d-flex">
                 <h4 class="modal-title" id="modal-basic-title">Room Types</h4>
                 <button
                   type="button"
